--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "components": "^0.1.0",
     "file-saver": "^2.0.5",
+    "git": "^0.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.2",
